<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/update_price_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_img_header">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back_black_18dp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/btn_transparent" />

        <TextView
            android:id="@+id/update_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="SẢN PHẨM"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black_text_color" />

        <RelativeLayout
            android:id="@+id/add_product_active_parent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <com.suke.widget.SwitchButton
                android:id="@+id/add_product_active_sw"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_5sdp"
                app:sb_checked="false"
                app:sb_checked_color="@color/colorBlueDark"
                app:sb_background="@color/black_text_color_hint"
                android:layout_centerInParent="true"
                />

            <View
                android:id="@+id/add_product_active"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:clickable="true"/>

        </RelativeLayout>





    </RelativeLayout>

    <ScrollView
        android:id="@+id/customer_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_40sdp"
        android:layout_below="@+id/update_price_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/add_product_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/colorLightGrey"
                android:src="@drawable/lub_logo_grey"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp">


                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    app:textHint="Nhập tên sản phẩm"
                    app:iconText="@string/icon_product" />

                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textHint="Nhóm sản phẩm"
                    app:iconText="@string/icon_product_group"
                    app:isDropdown="true"
                    app:textColor="@color/colorBlue" />

                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textHint="Đơn vị tính"
                    app:iconText="@string/icon_product_minimize"
                    app:isDropdown="true"
                    app:textColor="@color/colorBlue" />

                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_unit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:textHint="Giá bán lẻ"
                    app:iconText="@string/icon_price" />

                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_purchase_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:textHint="Giá chiết khấu Sale"
                    app:iconText="@string/icon_purchase" />

                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_distributor_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:textHint="Giá nhập phân phối"
                    app:iconText="@string/icon_base_price" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <wolve.dms.customviews.CInputForm
                        android:id="@+id/add_product_unit_in_carton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        app:textHint="đơn vị/ thùng"
                        app:iconText="@string/icon_container" />
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorGrey"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"/>

                    <wolve.dms.customviews.CInputForm
                        android:id="@+id/add_product_volume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        app:textHint="Khối lượng"
                        app:iconText="@string/icon_weight" />
                </LinearLayout>



                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_promotion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textHint=""
                    app:iconText="@string/icon_gift"
                    app:isDropdown="true"
                    app:textColor="@color/colorBlue" />

                <wolve.dms.customviews.CInputForm
                    android:id="@+id/add_product_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:background="?selectableItemBackground"
                    app:iconText="@string/icon_comment"
                    app:multiLine="true"
                    app:textColor="@drawable/text_white_selected"
                    app:textHint="Ghi chú sản phẩm"
                    app:isShowBottomLine="false" />


            </LinearLayout>

            <Button
                android:id="@+id/add_product_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:minWidth="@dimen/_150sdp"
                android:background="@drawable/btn_confirm_blue"
                android:layout_margin="@dimen/_10sdp"
                android:text="CẬP NHẬT"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/add_product_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_text_color_hint"
        android:layout_below="@+id/update_price_header"
        android:clickable="true"
        android:visibility="gone"/>

</RelativeLayout>