<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_distributor_parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/add_distributor_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/bg_img_header">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_back_black_18dp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/btn_transparent" />

        <TextView
            android:id="@+id/add_distributor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="THÔNG TIN NHÀ PHÂN PHỐI"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black_text_color" />

    </RelativeLayout>

    <TextView
        android:id="@+id/add_distributor_expire_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:text="0000"
        android:textSize="@dimen/_8sdp"
        android:textColor="@color/white_text_color"
        android:layout_below="@+id/add_distributor_header"
        android:gravity="center"
        android:padding="@dimen/_2sdp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_distributor_expire_to"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_40sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/add_distributor_image_parent"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/bg_white_corner_stroke_grey">

                <ImageView
                    android:id="@+id/add_distributor_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/lub_logo_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/font_awesome"
                    android:text="@string/icon_edit_pen" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="(Chọn logo có nền trắng)"
                android:textSize="@dimen/_10sdp"
                android:textStyle="italic" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"

                app:iconText="@string/icon_username"
                app:textHint="Tên Nhà Phân Phối" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"

                app:iconText="@string/icon_district"
                app:textHint="Tỉnh / Thành phố" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                app:iconText="@string/icon_building"
                app:textHint="Tên công ty" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_company_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                app:iconText="@string/icon_adress"
                app:textHint="Địa chỉ" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_company_hotline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:iconText="@string/icon_hotline"
                app:textHint="Hotline" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_company_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:iconText="@string/icon_global"
                app:textHint="Website / Email" />

            <wolve.dms.customviews.CInputForm
                android:id="@+id/add_distributor_company_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconText="@string/icon_smile"
                app:textHint="Lời chào" />

            <Button
                android:id="@+id/add_distributor_submit"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_confirm_blue"
                android:minWidth="@dimen/_150sdp"
                android:text="CẬP NHẬT"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/add_distributor_admin_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/add_distributor_progress"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorBlue"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/add_distributor_rvadmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/_5sdp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/add_distributor_add_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:background="@drawable/btn_round_white_border_grey"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:fontFamily="@font/font_awesome"
                        android:text="@string/icon_plus" />

                    <TextView
                        android:id="@+id/add_distributor_add_admin_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:text="Tạo quản trị viên"
                        android:textAllCaps="true"
                        android:textColor="@color/black_text_color_hint" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>